--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,12 @@
     <title>Chatbot</title>
 
     <!-- Link to external CSS file -->
+    <!-- Load Font Awesome from CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Load your custom stylesheet after -->
     <link rel="stylesheet" href="static/css/styles.css">
+
 </head>
 
 <body>
@@ -27,6 +32,9 @@
             <input type="text" id="inputbox" placeholder="Type your message...">
             <button onclick="sendMessage()">Send</button>
         </div>
+        <button id="new-chat-button" onclick="startNewChat()">
+            <i class="fa-solid fa-comments"></i>
+        </button>
     </div>
 
     <!-- Include your JavaScript file -->
