Shift+Enter completed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
         <div id="chat-header">ChatBot</div>
         <div id="chatbox"></div>
         <div id="input-area">
-            <input type="text" id="inputbox" placeholder="Type your message...">
+            <textarea type="text" id="inputbox" placeholder="Type your message..."></textarea>
             <button onclick="sendMessage()">Send</button>
         </div>
         <button id="new-chat-button" onclick="startNewChat()">
