--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,16 +26,22 @@
     </div>
 
     <div id="chat-bot">
-        <div id="chat-header">ChatBot</div>
+        <div id="chat-header">
+            <button id="new-chat-button" onclick="startNewChat()">
+                <i class="fa-solid fa-comments"></i>
+            </button>
+            <span id="chat-title">ChatBot</span>
+            <button id="old-chat-button" onclick="openOldChat()">
+                <i class="fa-solid fa-history"></i>
+            </button>
+        </div>              
         <div id="chatbox"></div>
         <div id="input-area">
             <input type="text" id="inputbox" placeholder="Type your message...">
             <button onclick="sendMessage()">Send</button>
         </div>
-        <button id="new-chat-button" onclick="startNewChat()">
-            <i class="fa-solid fa-comments"></i>
-        </button>
     </div>
+    
 
     <!-- Include your JavaScript file -->
     <script src="static/js/scripts.js"></script>
