--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta tags and other head content -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot</title>
 
-    <!-- Link to external CSS file -->
-    <!-- Load Font Awesome from CDN -->
+    <!-- Load Roboto font and Font Awesome from CDN -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <!-- Load your custom stylesheet after -->
+    <!-- Link to your custom stylesheet -->
     <link rel="stylesheet" href="static/css/styles.css">
-
 </head>
-
 <body>
 
     <div id="theme-switch-wrapper">
@@ -37,13 +34,12 @@
         </div>              
         <div id="chatbox"></div>
         <div id="input-area">
-            <textarea type="text" id="inputbox" placeholder="Type your message..."></textarea>
+            <textarea id="inputbox" placeholder="Type your message..."></textarea>
             <button onclick="sendMessage()">Send</button>
         </div>
     </div>
-    
 
-    <!-- Include your JavaScript file -->
+    <!-- Include JavaScript file -->
     <script src="static/js/scripts.js"></script>
 
 </body>
