--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Link to your custom stylesheet -->
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css?v=2.0.1">
 </head>
 <body>
 
@@ -47,3 +47,15 @@
 
 </body>
 </html>
+<script>
+    // Define your app version (increment when updating assets)
+    const currentVersion = "2.0.1"; // Update this for each new deployment
+
+    // Compare with stored version
+    const storedVersion = localStorage.getItem('appVersion');
+    if (storedVersion !== currentVersion) {
+        // Update version in storage and reload to clear cache
+        localStorage.setItem('appVersion', currentVersion);
+        window.location.reload(true); // True to force bypassing the cache
+    }
+</script>
