--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,18 +13,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Link to your custom stylesheet -->
-    <link rel="stylesheet" href="static/css/styles.css?v=2.0.1">
+    <link rel="stylesheet" href="static/css/styles.css?v=2.0.3">
 </head>
 <body>
 
-    <div id="theme-switch-wrapper">
-        <label id="theme-label" for="theme-checkbox"></label>
-        <label class="switch">
-            <input type="checkbox" id="theme-checkbox">
-            <span class="slider round"></span>
-        </label>
+    <!-- App Version Control Script (forces cache refresh when version changes) -->
+    <script>
+        const currentVersion = "2.0.3"; // Update this for each new deployment
+        const storedVersion = localStorage.getItem('appVersion');
+        if (storedVersion !== currentVersion) {
+            localStorage.setItem('appVersion', currentVersion);
+            window.location.reload(true); // True forces cache bypass
+        }
+    </script>
+
+    <!-- Header Controls: Centered at the top of the page -->
+    <div id="header-controls">
+        <div id="ai-method-container">
+            <label for="ai-method-select">Choose AI:</label>
+            <select id="ai-method-select" required>
+                <option value="" disabled selected>Select a method</option>
+            </select>
+        </div>
+        
+        <div id="theme-switch-wrapper">
+            <label id="theme-label" for="theme-checkbox"></label>
+            <label class="switch">
+                <input type="checkbox" id="theme-checkbox">
+                <span class="slider round"></span>
+            </label>
+        </div>
     </div>
 
+    <!-- Chatbot Container -->
     <div id="chat-bot">
         <div id="chat-header">
             <button id="new-chat-button" onclick="startNewChat()">
@@ -38,7 +59,7 @@
         <div id="chatbox"></div>
         <div id="input-area">
             <textarea id="inputbox" placeholder="Type your message..."></textarea>
-            <button onclick="sendMessage()">Send</button>
+            <button id="send-button" onclick="sendMessage()" disabled>Send</button>
         </div>
     </div>
 
@@ -47,15 +68,3 @@
 
 </body>
 </html>
-<script>
-    // Define your app version (increment when updating assets)
-    const currentVersion = "2.0.1"; // Update this for each new deployment
-
-    // Compare with stored version
-    const storedVersion = localStorage.getItem('appVersion');
-    if (storedVersion !== currentVersion) {
-        // Update version in storage and reload to clear cache
-        localStorage.setItem('appVersion', currentVersion);
-        window.location.reload(true); // True to force bypassing the cache
-    }
-</script>
